--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>James Dulinayan</title>
+  <title>James Dulinayan | Home</title>
   <link rel="icon" type="image/png" href="img/icon.png" />
 
 <!--Style-->
