--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <a href="">
       <div class="container">
         <video autoplay muted loop>
-     <source src="img/portfolio/2.mov" type="video/mp4">
+     <source src="img/portfolio/2.mp4" type="video/mp4">
         </video>
         <div class="overlay">
           <div class="text">RANDOM</div>
