--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="fat-nav__wrapper">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/works.html">My Works</a></li>
+                <li><a href="pages/works.html">Works</a></li>
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
