--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="fat-nav__wrapper">
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="pages/works.html">Works</a></li>
+                <li><a href="pages/works.html">My Works</a></li>
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
@@ -84,9 +84,8 @@
         <section class="box-intro">
             <div class="table-cell">
                 <h1 class="box-headline letters rotate-2">
-                   <img src="img/hello.gif">
+                   <img src="img/webdesign.gif">
             </h1>
-                <h5>GRAPHIC / WEB / MOTION</h5>
             </div>
 
             <div class="mouse">
