--- a/pages/works.html
+++ b/pages/works.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>James Dulinayan</title>
+  <title>James Dulinayan | Works</title>
   <meta name="keyword" content="James Dulinayan Portfolio">
     <meta name="keyword" content="James Dulinayan">
     <meta name="description" content="James Dulinayan - A web, motion, and graphic designer based in Philippines">
