--- a/pages/about.html
+++ b/pages/about.html
@@ -63,7 +63,7 @@
           <h1>ABOUT ME</h1>
           <p>I'm a web, motion,  and graphic designer based in Philippines. New experience and challenges are my thing. If you have any great projects and opportunities, hit me up!</p>
           <br><br>
-          <button class="button" onclick="window.open('https:/drive.google.com/file/d/1AdhT9n2Ej4Wzgio0V3AJ8UsBIcH1vEel/view?usp=sharing', '_blank')"><span>View CV </span></button>
+          <button class="button" onclick="window.location.href='https:/drive.google.com/file/d/1AdhT9n2Ej4Wzgio0V3AJ8UsBIcH1vEel/view?usp=sharing';"><span>View CV </span></button>
         </div>
 
 <!--
