--- a/pages/about.html
+++ b/pages/about.html
@@ -63,8 +63,8 @@
           <h1>ABOUT ME</h1>
           <p>I'm a web, motion,  and graphic designer based in Philippines. New experience and challenges are my thing. If you have any great projects and opportunities, hit me up!</p>
           <br><br>
-          <button class="button" onclick="window.location.href='https:/drive.google.com/file/d/1AdhT9n2Ej4Wzgio0V3AJ8UsBIcH1vEel/view?usp=sharing';"><span>View CV </span></button>
-        </div>
+          <a href="https:/drive.google.com/file/d/1AdhT9n2Ej4Wzgio0V3AJ8UsBIcH1vEel/view?usp=sharing">View CV</a>
+	  </div>
 
 <!--
   <!--Portfolio grid-->
@@ -81,7 +81,7 @@
     </div>
   </div>
   <div class="bar">
-    <div class="skill">jQuery</div>
+    <div class="skill">JavaScript</div>
     <div class="bar-outer">
       <div class="speech-bubble jquery">25%</div>
       <div class="bar-inner jq"></div>
